@@ -11,6 +11,7 @@ September 6, 2007
 * [Mathieu Malaterre] CMake: start compiling index_create
 * [Mathieu Malaterre] OpenJPEG.rc update copyright year
 * [Mathieu Malaterre] CMake: add Java j2kviewer but do not compile it using cmake since cmake has too poor support for Java. Should create a custom command running ant instead.
+* [Mathieu Malaterre] CMake: Add doxygen output
 
 September 4, 2007
 + [GB] Added some fields in the codestream_info structure: they are used to record the position of single tile parts. Changed also the write_index function in the codec, to reflect the presence of this new information.
